--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 set(PROJECT_NAME Cloth)
 project(${PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)
-find_package(OpenGL)
+#find_package(OpenGL)
 
-file(GLOB source_files
-	"src/*.cpp"
+file(GLOB_RECURSE source_files
+    "src/*.cpp"
+    "include/*.hpp"
 )
 
 set(SOURCES ${source_files})
@@ -13,9 +14,23 @@ set(SOURCES ${source_files})
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2 REQUIRED COMPONENTS network audio graphics window system)
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+# Set build type
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif(NOT CMAKE_BUILD_TYPE)
+
+add_executable(${PROJECT_NAME} ${WIN32_GUI} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE "include" "lib")
-target_link_libraries(${PROJECT_NAME} sfml-system sfml-window sfml-graphics)
+set(SFML_LIBS sfml-system sfml-window sfml-graphics)
+target_link_libraries(${PROJECT_NAME} ${SFML_LIBS})
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 if (UNIX)
    target_link_libraries(${PROJECT_NAME} pthread)
 endif (UNIX)
+
+if(MSVC)
+   foreach(lib ${SFML_LIBS})
+      get_target_property(lib_path ${lib} LOCATION)
+      file(COPY ${lib_path} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+   endforeach()
+endif(MSVC)
