--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,42 +1,30 @@
-cmake_minimum_required(VERSION 3.10)
-set(PROJECT_NAME Cloth)
-project(${PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)
-#find_package(OpenGL)
+cmake_minimum_required(VERSION 3.16)
+project(Cloth LANGUAGES CXX)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
+
+include(FetchContent)
+FetchContent_Declare(SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 2.6.x)
+FetchContent_MakeAvailable(SFML)
 
 file(GLOB_RECURSE source_files
     "src/*.cpp"
-    "include/*.hpp"
 )
 
 set(SOURCES ${source_files})
 
-# Detect and add SFML
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
-find_package(SFML 2 REQUIRED COMPONENTS network audio graphics window system)
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PRIVATE "src" "include")
+target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
-# Set build type
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
-endif(NOT CMAKE_BUILD_TYPE)
-
-add_executable(${PROJECT_NAME} ${WIN32_GUI} ${SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE "include" "lib")
-set(SFML_LIBS sfml-system sfml-window sfml-graphics)
-target_link_libraries(${PROJECT_NAME} ${SFML_LIBS})
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
-if (UNIX)
-   target_link_libraries(${PROJECT_NAME} pthread)
-endif (UNIX)
-
-if(MSVC)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
-else()
-  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
+if(WIN32)
+    add_custom_command(
+        TARGET ${PROJECT_NAME}
+        COMMENT "Copy OpenAL DLL"
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:${PROJECT_NAME}>
+        VERBATIM)
 endif()
-
-if(MSVC)
-   foreach(lib ${SFML_LIBS})
-      get_target_property(lib_path ${lib} LOCATION)
-      file(COPY ${lib_path} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-   endforeach()
-endif(MSVC)
